--- a/front/web/index.html
+++ b/front/web/index.html
@@ -34,11 +34,46 @@
     <button onclick="window.location.href='adocao.html'"><img src="../web/images/salve-os-animais.gif" alt="Ícone animado" width="40" height="40">Adoção</button>
     <button onclick="window.location.href='doacoes.html'"><img src="../web/images/doacao.gif" alt="Ícone animado" width="40" height="40">Doações</button>
   </div>
+
+
+  <!-- Cards  no começo da pagina-->
+   <br><br><br><br><br>
+   
+   <div class="anuncios">
+    <br><br>
+    <button onclick="window.location.href='pedidos.html'">
+        <img src="../web/images/doacao.gif" alt="Ícone animado" width="40" height="40">
+        <p style="color: black;">
+            <b style="color: rgb(75, 197, 235);">Brinquedos que fazem a diferença!</b><br>
+            Doe e ajude a levar felicidade para quem mais precisa.<br>
+            <b style="color: rgb(75, 197, 235);">Doe agora -></b>
+        </p>
+    </button>
+    <button onclick="window.location.href='favorito.html'">
+        <img src="../web/images/veterinario.gif" alt="Ícone animado" width="40" height="40">
+        <p style="color: black;">
+            <b style="color: rgb(75, 197, 235);">Acupuntura para pets:</b><br>
+            amor e saúde em cada ponto!<br>
+            <b style="color: rgb(75, 197, 235);">Agende Agora! -></b>
+        </p><br>
+    </button>
+    <button onclick="window.location.href='pedidos.html'">
+        <img src="../web/images/noticias.gif" alt="Ícone animado" width="40" height="40">
+        <p style="color: black;">
+            <b style="color: rgb(75, 197, 235);">Amor  e cuidado para seu pet em um só lugar!</b><br>
+            Confira nosso blog com conteúdos exclusivos para deixar seu pet feliz e saudável.<br>
+            <b style="color: rgb(75, 197, 235);">Confira Agora -></b>
+        </p>
+    </button>
+</div>
+
+
   <!--Banner pequeno-->
   <div class="banner">
     <h5 class="banner-text">Frete fixo de R$10.00 reais para todo o Brasil</h5>
     <h5 class="banner-text active">Compras acima de R$100,00 ganham um brinde</h5>
-  </div>
+  </div>  
+
   <!--Carousel de imagens-->
       
 <div class="carousel" aria-label="Galeria de imagens de Petshop"><br>
@@ -48,18 +83,24 @@
         <img src="tosa.gif" alt="cachorro" />
         <button class="prev" aria-label="Imagem anterior">&#10094;</button>
         <button class="next" aria-label="Próxima imagem">&#10095;</button><br><br>
+  
+      </div>
+  <!-- Container dos indicadores (bolinhas) -->
+      <br><br>
+        <div class="carousel-indicators" aria-label="Indicadores do carousel">
+        <!-- As bolinhas serão criadas dinamicamente pelo JavaScript -->
     </div>
   <!--Botões de animais-->
-      <br><br><br><br><br><br>
+      <br><br><br>
 <div class="animal">
     <br>
-    <button onclick="window.location.href='pedidos.html'"><img src="dog.png"></button>
-    <button onclick="window.location.href='favorito.html'"><img src="cat.png"></button>
-    <button onclick="window.location.href='pedidos.html'"><img src="fish.png"></button>
-    <button onclick="window.location.href='favorito.html'"><img src="passaro.png"></button>
+    <button onclick="window.location.href='pedidos.html'"><img src="../web/images/cachorro.gif" alt="Ícone animado" width="40" height="40">Cachorros</button>
+    <button onclick="window.location.href='favorito.html'"><img src="../web/images/gato.gif" alt="Ícone animado" width="40" height="40">Gatos</button>
+    <button onclick="window.location.href='pedidos.html'"><img src="../web/images/peixe-palhaco.gif" alt="Ícone animado" width="40" height="40">Peixes</button>
+    <button onclick="window.location.href='favorito.html'"><img src="../web/images/animais.gif" alt="Ícone animado" width="40" height="40">Passáros</button>
     <br>
 </div><br><br>
-  <!--Produtos-->
+  <!--Produtos
   <main class="mainContainer">
         <div id="produtos-container">
             <div id="detalhes" class="modal oculto">
@@ -74,7 +115,7 @@
             </div>
         </div>
 
-    </main>
+    </main>-->
   <!--Icone de whatsapp-->
   <br><br><br>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
