--- a/front/web/index.html
+++ b/front/web/index.html
@@ -23,9 +23,6 @@
     <button onclick="window.location.href='pedidos.html'">
       <img src="../web/images/caixa-de-coracao.png" alt="Pedidos" />
     </button>
-    <button onclick="window.location.href='favorito.html'">
-      <img src="../web/images/favorito.png" alt="Favoritos" />
-    </button>
     <button onclick="window.location.href='carrinho.html'">
       <img src="../web/images/adicionar-ao-carrinho.png" alt="Carrinho" />
     </button>
@@ -39,17 +36,14 @@
     <button onclick="window.location.href='consulta.html'">
       <img src="../web/images/veterinario.gif" alt="Consulta" width="40" height="40" />Consulta
     </button>
-    <button onclick="window.location.href='aculpuntura.html'">
-      <img src="../web/images/cabeca.png" alt="Acupuntura" width="40" height="40" />Acupuntura
-    </button>
-    <button onclick="window.location.href='blog.html'">
-      <img src="../web/images/noticias.gif" alt="Blog" width="40" height="40" />Blog
-    </button>
     <button onclick="window.location.href='adocao.html'">
       <img src="../web/images/salve-os-animais.gif" alt="Adoção" width="40" height="40" />Adoção
     </button>
     <button onclick="window.location.href='doacoes.html'">
       <img src="../web/images/doacao.gif" alt="Doações" width="40" height="40" />Doações
+    </button>
+    <button onclick="window.location.href='cadastrar.html'">
+      <img src="../web/images/noticias.gif" alt="Adoção" width="40" height="40" />Cadastrar
     </button>
   </div>
 
@@ -65,21 +59,21 @@
         <b style="color: rgb(75, 197, 235);">Doe agora -></b>
       </p>
     </button>
-    <button onclick="window.location.href='favorito.html'">
+    <button onclick="window.location.href='consulta.html'">
       <img src="../web/images/veterinario.gif" alt="Acupuntura" width="40" height="40" />
       <p style="color: black;">
-        <b style="color: rgb(75, 197, 235);">Acupuntura para pets:</b><br />
+        <b style="color: rgb(75, 197, 235);">Consulta para pets:</b><br />
         amor e saúde em cada ponto!<br />
         <b style="color: rgb(75, 197, 235);">Agende Agora! -></b>
       </p>
       <br />
     </button>
-    <button onclick="window.location.href='pedidos.html'">
-      <img src="../web/images/noticias.gif" alt="Blog" width="40" height="40" />
+    <button onclick="window.location.href='adocao.html'">
+      <img src="../web/images/salve-os-animais.gif" alt="Blog" width="40" height="40" />
       <p style="color: black;">
-        <b style="color: rgb(75, 197, 235);">Amor e cuidado para seu pet em um só lugar!</b><br />
-        Confira nosso blog com conteúdos exclusivos para deixar seu pet feliz e saudável.<br />
-        <b style="color: rgb(75, 197, 235);">Confira Agora -></b>
+        <b style="color: rgb(75, 197, 235);">Amor e cuidado!</b><br />
+        Faça a vida de um animalzinho feliz hoje,Adote um pet!<br />
+        <b style="color: rgb(75, 197, 235);">Adote Agora -></b>
       </p>
     </button>
   </div>
@@ -175,10 +169,7 @@
         <img src="../web/images/gato.gif" alt="Gatos" />Gatos
       </button>
       <button onclick="window.location.href='pedidos.html'">
-        <img src="../web/images/peixe-palhaco.gif" alt="Peixes" />Peixes
-      </button>
-      <button onclick="window.location.href='favorito.html'">
-        <img src="../web/images/animais.gif" alt="Passáros" />Passáros
+        <img src="../web/images/peixe-palhaco.gif" alt="Peixes" />Outros pets
       </button>
     </div>
 
@@ -186,34 +177,22 @@
 
     <div class="animal">
       <button onclick="window.location.href='pedidos.html'">
-        <img src="../web/images/cachorro.gif" alt="Cachorros" />Ração
+        <img src="../web/images/cachorro.gif" alt="Cachorros" />Ração,petisco e Biscoito
       </button>
       <button onclick="window.location.href='favorito.html'">
-        <img src="../web/images/gato.gif" alt="Gatos" />Petiscos e Biscoito
+        <img src="../web/images/gato.gif" alt="Gatos" />Areias, Banheiro, Higiene e Limpeza
       </button>
       <button onclick="window.location.href='pedidos.html'">
-        <img src="../web/images/peixe-palhaco.gif" alt="Peixes" />Areias e Banheiro
-      </button>
-      <button onclick="window.location.href='favorito.html'">
-        <img src="../web/images/animais.gif" alt="Passáros" />Farmácia
-      </button>
-    </div>
-
-    <div class="animal">
-      <button onclick="window.location.href='favorito.html'">
-        <img src="../web/images/animais.gif" alt="Passáros" />Arranhador e Brinquedo
-      </button>
-      <button onclick="window.location.href='favorito.html'">
-        <img src="../web/images/animais.gif" alt="Passáros" />Higiene e Limpeza
+        <img src="../web/images/peixe-palhaco.gif" alt="Peixes" />Farmácia
       </button>
       <button onclick="window.location.href='favorito.html'">
         <img src="../web/images/animais.gif" alt="Passáros" />Casas e Aquários
       </button>
-      <button onclick="window.location.href='favorito.html'">
+       <button onclick="window.location.href='favorito.html'">
         <img src="../web/images/animais.gif" alt="Passáros" />Coleiras, Guia e Peitoral
       </button>
     </div>
-  </div>
+
 </section>
 <br><br><br><br><br><br>
 <div class="cb">
@@ -250,7 +229,7 @@
       <div id="related-dup" class="related-products-dup"></div>
 
       <div class="modal-actions-dup">
-        <button id="adicionarCarrinho-dup"><img src="../web/images/carrinho.png"</button>
+        <button id="adicionarCarrinho-dup">Adicionar ao Carrinho</button>
       </div>
     </div>
   </div>
