--- a/front/web/index.html
+++ b/front/web/index.html
@@ -14,13 +14,9 @@
     <h1>𝓟𝓮𝓽 𝓖𝓪𝓽𝓸</h1>
     <!-- Barra de pesquisa -->
     <li class="search-icon">
-      <input type="search" placeholder="Pesquisa" />
-      <label class="icon">
-        <span class="fas fa-search"></span>
-      </label>
     </li>
     <!-- Botões do cabeçalho -->
-    <button onclick="window.location.href='pedidos.html'">
+    <button onclick="window.location.href='carrinho.html'">
       <img src="../web/images/caixa-de-coracao.png" alt="Pedidos" />
     </button>
     <button onclick="window.location.href='carrinho.html'">
@@ -102,28 +98,28 @@
 
   <!-- Cards de frete e de 3 vezes sem juros -->
   <div class="juros">
-    <button onclick="window.location.href='pedidos.html'">
+    <button onclick="window.location.href='confira.html'">
       <img src="../web/images/relogio.png" alt="Receba em algumas horas" width="40" height="40" />
       <p style="color: rgb(112, 109, 109);">
         <b>Receba em algumas horas!</b><br />
         Confira as regras ->
       </p>
     </button>
-    <button onclick="window.location.href='pedidos.html'">
+    <button onclick="window.location.href='confira.html'">
       <img src="../web/images/cartao.png" alt="Parcele em 3x sem juros" width="40" height="40" />
       <p style="color: rgb(112, 109, 109);">
         <b>Parcele em 3x sem juros!</b><br />
         Confira as regras ->
       </p>
     </button>
-    <button onclick="window.location.href='pedidos.html'">
+    <button onclick="window.location.href='confira.html'">
       <img src="../web/images/entrega-rapida.png" alt="Frete Grátis" width="40" height="40" />
       <p style="color: rgb(112, 109, 109);">
         <b>Frete Grátis!</b><br />
         Confira as regras ->
       </p>
     </button>
-    <button onclick="window.location.href='pedidos.html'">
+    <button onclick="window.location.href='confira.html'">
       <img src="../web/images/petshop.png" alt="Retire e troque seu pedido na loja" width="40" height="40" />
       <p style="color: rgb(112, 109, 109);">
         <b>Retire e troque seu pedido na loja!</b><br />
