--- a/front/web/index.html
+++ b/front/web/index.html
@@ -9,13 +9,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
-  <!-- Cabeçalho -->
   <header>
     <h1>𝓟𝓮𝓽 𝓖𝓪𝓽𝓸</h1>
-    <!-- Barra de pesquisa -->
-    <li class="search-icon">
-    </li>
-    <!-- Botões do cabeçalho -->
+   
     <button onclick="window.location.href='carrinho.html'">
       <img src="../web/images/caixa-de-coracao.png" alt="Pedidos" />
     </button>
@@ -27,23 +23,21 @@
     </button>
   </header>
 
-  <!-- Segundo cabeçalho -->
   <div class="Containerheader">
     <button onclick="window.location.href='consulta.html'">
-      <img src="../web/images/veterinario.gif" alt="Consulta" width="40" height="40" />Consulta
+      Consulta
     </button>
     <button onclick="window.location.href='adocao.html'">
-      <img src="../web/images/salve-os-animais.gif" alt="Adoção" width="40" height="40" />Adoção
+      Adoção
     </button>
     <button onclick="window.location.href='doacoes.html'">
-      <img src="../web/images/doacao.gif" alt="Doações" width="40" height="40" />Doações
+      Doações
     </button>
     <button onclick="window.location.href='cadastrar.html'">
       <img src="../web/images/noticias.gif" alt="Adoção" width="40" height="40" />Cadastrar
     </button>
   </div>
 
-  <!-- Cards no começo da página -->
   <br /><br /><br /><br /><br />
   <div class="anuncios">
     <br /><br />
@@ -68,19 +62,17 @@
       <img src="../web/images/salve-os-animais.gif" alt="Blog" width="40" height="40" />
       <p style="color: black;">
         <b style="color: rgb(75, 197, 235);">Amor e cuidado!</b><br />
-        Faça a vida de um animalzinho feliz hoje,Adote um pet!<br />
+        Faça a vida de um animalzinho feliz hoje, Adote um pet!<br />
         <b style="color: rgb(75, 197, 235);">Adote Agora -></b>
       </p>
     </button>
   </div>
 
-  <!-- Banner pequeno -->
   <div class="banner">
     <h5 class="banner-text">Frete fixo de R$10.00 reais para todo o Brasil</h5>
     <h5 class="banner-text active">Compras acima de R$100,00 ganham um brinde</h5>
   </div>
 
-  <!-- Carousel de imagens -->
   <div class="carousel" aria-label="Galeria de imagens de Petshop">
     <br />
     <img src="racao.gif" alt="petgato" class="active" />
@@ -90,13 +82,8 @@
     <button class="next" aria-label="Próxima imagem">&#10095;</button>
     <br /><br />
   </div>
-
-  <!-- Container dos indicadores (bolinhas) -->
   <div class="carousel-indicators" aria-label="Indicadores do carousel">
-    <!-- As bolinhas serão criadas dinamicamente pelo JavaScript -->
   </div>
-
-  <!-- Cards de frete e de 3 vezes sem juros -->
   <div class="juros">
     <button onclick="window.location.href='confira.html'">
       <img src="../web/images/relogio.png" alt="Receba em algumas horas" width="40" height="40" />
@@ -127,7 +114,8 @@
       </p>
     </button>
   </div>
-  <br><br><br>
+
+  <br /><br /><br />
   <div class="text">
     <h1><b style="color:rgb(0, 17, 255)">Produtos Recomendados:</b></h1>
   </div>
@@ -157,19 +145,21 @@
   <div class="fundoparcial-content"><br><br><br><br>
     <div class="pet"><h1><b style="font-size: 35px;">Tudo para Pets:</b></h1></div>
 
-    <div class="animal">
-      <button onclick="window.location.href='pedidos.html'">
-        <img src="../web/images/cachorro.gif" alt="Cachorros" />Cachorros
-      </button>
-      <button onclick="window.location.href='favorito.html'">
-        <img src="../web/images/gato.gif" alt="Gatos" />Gatos
-      </button>
-      <button onclick="window.location.href='pedidos.html'">
-        <img src="../web/images/peixe-palhaco.gif" alt="Peixes" />Outros pets
-      </button>
-    </div>
+      <div class="animal">
+        <button onclick="window.location.href='pedidos.html'">
+          <img src="../web/images/cachorro.gif" alt="Cachorros" />Cachorros
+        </button>
+        <button onclick="window.location.href='favorito.html'">
+          <img src="../web/images/gato.gif" alt="Gatos" />Gatos
+        </button>
+        <button onclick="window.location.href='pedidos.html'">
+          <img src="../web/images/peixe-palhaco.gif" alt="Peixes" />Outros pets
+        </button>
+      </div>
 
-    <div class="pet"><h1><b style="font-size: 35px;">Outros:</b></h1></div>
+      <div class="pet">
+        <h1><b style="font-size: 35px;">Outros:</b></h1>
+      </div>
 
     <div class="animal">
       <button onclick="window.location.href='pedidos.html'">
@@ -248,7 +238,7 @@
     </div>
     <div class="popup-body">
       <div class="contact" onclick="window.open('https://wa.me/19995601381','_blank')">
-        <img src="cricri.jpg" alt="Pet Gatô" />
+        <img src="" alt="Pet Gatô" />
         <div class="contact-info">
           <strong>Pet Gatô</strong>
           <span>Pet Gatô</span>
