--- a/front/web/index.html
+++ b/front/web/index.html
@@ -9,9 +9,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
+  <!-- Cabeçalho -->
   <header>
     <h1>𝓟𝓮𝓽 𝓖𝓪𝓽𝓸</h1>
-   
+    <li class="search-icon"></li>
     <button onclick="window.location.href='carrinho.html'">
       <img src="../web/images/caixa-de-coracao.png" alt="Pedidos" />
     </button>
@@ -23,21 +24,23 @@
     </button>
   </header>
 
+  <!-- Segundo cabeçalho -->
   <div class="Containerheader">
     <button onclick="window.location.href='consulta.html'">
-      Consulta
+      <img src="../web/images/veterinario.gif" alt="Consulta" width="40" height="40" />Consulta
     </button>
     <button onclick="window.location.href='adocao.html'">
-      Adoção
+      <img src="../web/images/salve-os-animais.gif" alt="Adoção" width="40" height="40" />Adoção
     </button>
     <button onclick="window.location.href='doacoes.html'">
-      Doações
+      <img src="../web/images/doacao.gif" alt="Doações" width="40" height="40" />Doações
     </button>
     <button onclick="window.location.href='cadastrar.html'">
-      <img src="../web/images/noticias.gif" alt="Adoção" width="40" height="40" />Cadastrar
+      <img src="../web/images/noticias.gif" alt="Cadastrar" width="40" height="40" />Cadastrar
     </button>
   </div>
 
+  <!-- Cards no começo da página -->
   <br /><br /><br /><br /><br />
   <div class="anuncios">
     <br /><br />
@@ -68,11 +71,13 @@
     </button>
   </div>
 
+  <!-- Banner pequeno -->
   <div class="banner">
     <h5 class="banner-text">Frete fixo de R$10.00 reais para todo o Brasil</h5>
     <h5 class="banner-text active">Compras acima de R$100,00 ganham um brinde</h5>
   </div>
 
+  <!-- Carousel de imagens -->
   <div class="carousel" aria-label="Galeria de imagens de Petshop">
     <br />
     <img src="racao.gif" alt="petgato" class="active" />
@@ -82,8 +87,13 @@
     <button class="next" aria-label="Próxima imagem">&#10095;</button>
     <br /><br />
   </div>
+
+  <!-- Container dos indicadores (bolinhas) -->
   <div class="carousel-indicators" aria-label="Indicadores do carousel">
+    <!-- As bolinhas serão criadas dinamicamente pelo JavaScript -->
   </div>
+
+  <!-- Cards de frete e de 3 vezes sem juros -->
   <div class="juros">
     <button onclick="window.location.href='confira.html'">
       <img src="../web/images/relogio.png" alt="Receba em algumas horas" width="40" height="40" />
@@ -119,108 +129,110 @@
   <div class="text">
     <h1><b style="color:rgb(0, 17, 255)">Produtos Recomendados:</b></h1>
   </div>
-<!-- Produtos com wrapper e navegação -->
-<main class="mainContainer">
+
+  <!-- Produtos com wrapper e navegação -->
+   <main class="mainContainer">
   <div class="produtos-wrapper">
     <div id="produtos-container">
       <!-- cards aqui -->
     </div>
-  
-  <div class="produtos-navigation" style="width: 80%; display: flex; justify-content: space-between; margin: 10px auto;">
-    <button id="btn-prev">Anterior</button>
-    <button id="btn-next">Próximo</button>
-  </div></div>
-</main>
-<br><br><br>
-  <!-- Botões de animais -->
-   <!-- substitua sua antiga div.fundoparcial por esta estrutura -->
-<section class="section-fundo">
-  <!-- SVG que desenha o bloco ondulado (topo + base) -->
-  <svg class="fundo-svg" viewBox="0 0 1440 400" preserveAspectRatio="none" aria-hidden="true">
-    <!-- o path abaixo cria ondas no topo e nas extremidades inferiores -->
-    <path fill="#B4E3F1" d="M0,80 C150,0 350,0 600,80 C850,160 1050,160 1440,80 L1440,320 C1200,260 1000,260 800,320 C600,380 400,380 200,320 L0,320 Z"></path>
-  </svg>
-<br>
-  <!-- aqui vai todo o seu conteúdo existente (copie/cole tudo dentro) -->
-  <div class="fundoparcial-content"><br><br><br><br>
-    <div class="pet"><h1><b style="font-size: 35px;">Tudo para Pets:</b></h1></div>
 
-      <div class="animal">
-        <button onclick="window.location.href='pedidos.html'">
-          <img src="../web/images/cachorro.gif" alt="Cachorros" />Cachorros
-        </button>
-        <button onclick="window.location.href='favorito.html'">
-          <img src="../web/images/gato.gif" alt="Gatos" />Gatos
-        </button>
-        <button onclick="window.location.href='pedidos.html'">
-          <img src="../web/images/peixe-palhaco.gif" alt="Peixes" />Outros pets
-        </button>
+    <!-- Modal de detalhes dos produtos recomendados -->
+    <div id="detalhes" class="modal oculto" aria-hidden="true" role="dialog" aria-modal="true">
+      <div class="janela">
+        <button id="fecharModal" aria-label="Fechar modal" onclick="fecharModal()">X</button>
+        <div id="conteudo"></div>
+        <button id="adicionarCarrinho" data-id="" onclick="adicionarCarrinho()">Adicionar ao Carrinho</button>
       </div>
-
-      <div class="pet">
-        <h1><b style="font-size: 35px;">Outros:</b></h1>
-      </div>
-
-    <div class="animal">
-      <button onclick="window.location.href='pedidos.html'">
-        <img src="../web/images/cachorro.gif" alt="Cachorros" />Ração,petisco e Biscoito
-      </button>
-      <button onclick="window.location.href='favorito.html'">
-        <img src="../web/images/gato.gif" alt="Gatos" />Areias, Banheiro, Higiene e Limpeza
-      </button>
-      <button onclick="window.location.href='pedidos.html'">
-        <img src="../web/images/peixe-palhaco.gif" alt="Peixes" />Farmácia
-      </button>
-      <button onclick="window.location.href='favorito.html'">
-        <img src="../web/images/animais.gif" alt="Passáros" />Casas e Aquários
-      </button>
-       <button onclick="window.location.href='favorito.html'">
-        <img src="../web/images/animais.gif" alt="Passáros" />Coleiras, Guia e Peitoral
-      </button>
     </div>
 
-</section>
-<br><br><br><br><br><br>
-<div class="cb">
-  <h1><b style="font-size: 45px;">Cuidados Básicos:</b></h1><br>
-</div><br><br><br>
-<div class="tosavet"><br>
-  <div class="banho">
-  <h2><b style="font-size: 50px;">Banho<br> & Tosa</b><br><br>
-  Higiene e Conforto para o seu melhor amigo!</h2>
-  <img src="../web/images/banho-tosa-pet-shop.jpg">
-</div><br>
-<div class="vet">
-  <h2><br><br><b style="font-size: 50px;">Veterinário</b><br><br>
-  A saúde de seu pet, a sua prioridade</h2>
-  <img src="../web/images/veterinario.png">
-</div>
-</div>
-<br><br><br><br><br><br>
-<!-- ========== SEÇÃO DUPLICADA DE PRODUTOS (COLE NO FINAL DA PÁGINA) ========== -->
-<main class="mainContainer-dup">
-  <div id="produtos-container-dup" class="produtos-grid-dup"></div>
-
-  <!-- MODAL DE DETALHES -->
-  <div id="detalhes-dup" class="modal-dup oculto">
-    <div class="janela-dup">
-      <div class="janela-header-dup">
-        <h3>Produtos Relacionados</h3>
-        <button id="fechar-detalhes-dup" aria-label="Fechar">X</button>
-      </div>
-
-      <div id="conteudo-dup" class="conteudo-produto-dup"></div>
-
-      <h4 style="margin:10px 0 5px 0">Você também pode gostar:</h4>
-      <div id="related-dup" class="related-products-dup"></div>
-
-      <div class="modal-actions-dup">
-        <button id="adicionarCarrinho-dup">Adicionar ao Carrinho</button>
-      </div>
+    <div class="produtos-navigation" style="width: 80%; display: flex; justify-content: space-between; margin: 10px auto;">
+      <button id="btn-prev">Anterior</button>
+      <button id="btn-next">Próximo</button>
     </div>
   </div>
 </main>
 
+
+  <br /><br /><br />
+
+  <!-- Botões de animais -->
+  <section class="section-fundo">
+    <!-- SVG que desenha o bloco ondulado (topo + base) -->
+    <svg class="fundo-svg" viewBox="0 0 1440 400" preserveAspectRatio="none" aria-hidden="true">
+      <path fill="#B4E3F1" d="M0,80 C150,0 350,0 600,80 C850,160 1050,160 1440,80 L1440,320 C1200,260 1000,260 800,320 C600,380 400,380 200,320 L0,320 Z"></path>
+    </svg>
+    <br />
+    <div class="fundoparcial-content">
+      <div class="pet">
+        <h1><b style="font-size: 35px;">Categorias:</b></h1>
+      </div>
+      <div class="animal">
+        <button onclick="window.location.href='cachorros.html'">
+          <img src="../web/images/cachorro.gif" alt="Cachorros" />Cachorros
+        </button>
+        <button onclick="window.location.href='gatos.html'">
+          <img src="../web/images/gato.gif" alt="Gatos" />Gatos
+        </button>  
+        <button onclick="window.location.href='pets.html'">
+          <img src="../web/images/peixe-palhaco.gif" alt="Peixes" />Outros pets
+        </button>
+        <button onclick="window.location.href='farmacia.html'">
+          <img src="../web/images/peixe-palhaco.gif" alt="Peixes" />Farmácia
+        </button>
+      </div>
+    </div>
+  </section>
+
+  <br /><br /><br /><br /><br /><br />
+
+  <div class="cb">
+    <h1><b style="font-size: 45px;">Cuidados Básicos:</b></h1><br />
+  </div>
+  <br /><br /><br />
+
+  <div class="tosavet">
+    <br />
+    <div class="banho">
+      <h2><b style="font-size: 50px;">Banho<br /> & Tosa</b><br /><br />
+        Higiene e Conforto para o seu melhor amigo!
+      </h2>
+      <img src="../web/images/banho-tosa-pet-shop.jpg" alt="Banho e Tosa" />
+    </div>
+    <br />
+    <div class="vet">
+      <h2><b style="font-size: 50px;">Veterinário</b><br /><br />
+        A saúde de seu pet, a sua prioridade
+      </h2>
+      <img src="../web/images/veterinario.png" alt="Veterinário" />
+    </div>
+  </div>
+
+  <br /><br /><br /><br /><br /><br />
+
+  <!-- Seção duplicada de produtos -->
+  <main class="mainContainer-dup">
+    <div id="produtos-container-dup" class="produtos-grid-dup"></div>
+
+    <!-- Modal de detalhes -->
+    <div id="detalhes-dup" class="modal-dup oculto">
+      <div class="janela-dup">
+        <div class="janela-header-dup">
+          <h3>Produtos Relacionados</h3>
+          <button id="fechar-detalhes-dup" aria-label="Fechar">X</button>
+        </div>
+
+        <div id="conteudo-dup" class="conteudo-produto-dup"></div>
+
+        <h4 style="margin:10px 0 5px 0">Você também pode gostar:</h4>
+        <div id="related-dup" class="related-products-dup"></div>
+
+        <div class="modal-actions-dup">
+          <button id="adicionarCarrinho-dup">Adicionar ao Carrinho</button>
+        </div>
+      </div>
+    </div>
+  </main>
 
   <!-- Ícone de WhatsApp -->
   <div class="tooltip">Precisa de ajuda?</div>
