--- a/front/web/index.html
+++ b/front/web/index.html
@@ -178,7 +178,7 @@
           <img src="../web/images/peixe-palhaco.gif" alt="Peixes" />Outros pets
         </button>
         <button onclick="window.location.href='farmacia.html'">
-          <img src="../web/images/peixe-palhaco.gif" alt="Peixes" />Farmácia
+          <img src="../web/images/farmacia.gif" alt="Peixes" />Farmácia
         </button>
       </div>
     </div>
@@ -210,29 +210,6 @@
 
   <br /><br /><br /><br /><br /><br />
 
-  <!-- Seção duplicada de produtos -->
-  <main class="mainContainer-dup">
-    <div id="produtos-container-dup" class="produtos-grid-dup"></div>
-
-    <!-- Modal de detalhes -->
-    <div id="detalhes-dup" class="modal-dup oculto">
-      <div class="janela-dup">
-        <div class="janela-header-dup">
-          <h3>Produtos Relacionados</h3>
-          <button id="fechar-detalhes-dup" aria-label="Fechar">X</button>
-        </div>
-
-        <div id="conteudo-dup" class="conteudo-produto-dup"></div>
-
-        <h4 style="margin:10px 0 5px 0">Você também pode gostar:</h4>
-        <div id="related-dup" class="related-products-dup"></div>
-
-        <div class="modal-actions-dup">
-          <button id="adicionarCarrinho-dup">Adicionar ao Carrinho</button>
-        </div>
-      </div>
-    </div>
-  </main>
 
   <!-- Ícone de WhatsApp -->
   <div class="tooltip">Precisa de ajuda?</div>
