--- a/front/web/index.html
+++ b/front/web/index.html
@@ -200,15 +200,35 @@
       <img src="../web/images/banho-tosa-pet-shop.jpg" alt="Banho e Tosa" />
     </div>
     <br />
-    <div class="vet">
+    <div class="vet"><button onclick="window.location.href='consulta.html'">
       <h2><b style="font-size: 50px;">Veterinário</b><br /><br />
         A saúde de seu pet, a sua prioridade
       </h2>
-      <img src="../web/images/veterinario.png" alt="Veterinário" />
+      <img src="../web/images/veterinario.png" alt="Veterinário" /></button>
     </div>
   </div>
 
   <br /><br /><br /><br /><br /><br />
+
+  <div class="blog">
+    <br />
+    <div class="banho">
+      <h2><b style="font-size: 50px;"> O que fazer se o Seu Pet estiver vesgo</b><br /><br />
+        Possíveis causas de um pet com olhos vesgos:
+      </h2>
+      
+    <p><strong>Problemas neurológicos:</strong> alteração nos nervos que controlam os músculos dos olhos, o que pode causar desalinhamento ocular. Isso pode vir acompanhado de outros sinais como perda de equilíbrio ou dificuldade para andar.</p>
+
+      <img src="../web/img/download.avif" alt="Banho e Tosa" />
+    </div>
+    <br />
+    <div class="vet"><button onclick="window.location.href='consulta.html'">
+      <h2><b style="font-size: 50px;">Veterinário</b><br /><br />
+        A saúde de seu pet, a sua prioridade
+      </h2>
+      <img src="../web/images/veterinario.png" alt="Veterinário" /></button>
+    </div>
+  </div>
 
 
   <script src="./JS/js3.js"></script>
