--- a/front/web/index.html
+++ b/front/web/index.html
@@ -208,26 +208,39 @@
     </div>
   </div>
 
-  <br /><br /><br /><br /><br /><br />
-
+  <br><br><br><br><br><br><br><br><br><br><br><br>
+<h1><b style="font-size: 45px; color: rgb(0, 17, 255);">Blog Pet Gatô:</b></h1><br><br><br>
   <div class="blog">
     <br />
-    <div class="banho">
-      <h2><b style="font-size: 50px;"> O que fazer se o Seu Pet estiver vesgo</b><br /><br />
-        Possíveis causas de um pet com olhos vesgos:
-      </h2>
-      
-    <p><strong>Problemas neurológicos:</strong> alteração nos nervos que controlam os músculos dos olhos, o que pode causar desalinhamento ocular. Isso pode vir acompanhado de outros sinais como perda de equilíbrio ou dificuldade para andar.</p>
+<div class="petum">
+      <div class="imn"> <img src="./img/banner2.jpg" alt="Banho e Tosa" /></div>
+      <h2><b style="font-size: 20px;"> Cuidados Essenciais para Filhotes</b>
+      </h2><br>
+    <p>A vacinação é fundamental para proteger o animal contra doenças graves, como cinomose e parvovirose. Já a vermifugação previne vermes intestinais que podem afetar...</p>
+    <br><h3>21/09/2025 | 6min de leitura</h3>
+    
+    <button onclick="window.location.href='pet3.html'"><b style="color: blue;">Leia mais <img src="../web/img/seta.gif"/></b></button>
+  </div>
 
-      <img src="../web/img/download.avif" alt="Banho e Tosa" />
-    </div>
-    <br />
-    <div class="vet"><button onclick="window.location.href='consulta.html'">
-      <h2><b style="font-size: 50px;">Veterinário</b><br /><br />
-        A saúde de seu pet, a sua prioridade
-      </h2>
-      <img src="../web/images/veterinario.png" alt="Veterinário" /></button>
-    </div>
+    <div class="petum">
+      <div class="imn"> <img src="../web/img/download.avif" alt="Banho e Tosa" /></div>
+      <h2><b style="font-size: 20px;"> O que fazer se o Seu Pet estiver vesgo</b>
+      </h2><br><br>
+    <p> Alteração nos nervos que controlam os músculos dos olhos, o que pode causar desalinhamento ocular. Isso pode vir a...</p>
+    <br><h3>17/09/2025 | 5min de leitura</h3>
+    <br>
+    <button onclick="window.location.href='pet1.html'"><b style="color: blue;">Leia mais <img src="../web/img/seta.gif"/></b></button>
+  </div>
+  <div class="petum">
+      <div class="imn"> <img src="./img/pet agua.jpg" alt="Banho e Tosa" /></div>
+      <h2><b style="font-size: 20px;"> Como Proteger Seu Pet Durante o Verão</b>
+      </h2><br><br>
+    <p>O calor intenso pode prejudicar a saúde do seu pet. O asfalto quente pode queimar as patas dos animais e o calor excessivo pode levar à...</p>
+    <br><h3>08/10/2025 | 4min de leitura</h3>
+    <br>
+    <button onclick="window.location.href='pet2.html'"><b style="color: blue;">Leia mais <img src="../web/img/seta.gif"/></b></button>
+  </div>
+  
   </div>
 
 
