--- a/front/web/index.html
+++ b/front/web/index.html
@@ -208,12 +208,12 @@
     </div>
   </div>
 
-  <br><br><br><br><br><br><br><br><br><br><br><br>
-<h1><b style="font-size: 45px; color: rgb(0, 17, 255);">Blog Pet Gatô:</b></h1><br><br><br>
+  <br><br><br><br><br><br><br>
+<h1><b style="font-size: 45px; color: rgb(0, 17, 255);">Blog Pet Gatô:</b></h1><br><br><br><br><br><br><br><br><br>
   <div class="blog">
     <br />
 <div class="petum">
-      <div class="imn"> <img src="./img/banner2.jpg" alt="Banho e Tosa" /></div>
+      <div class="imn"> <img src="./img/blog1.jpg" alt="Banho e Tosa" /></div>
       <h2><b style="font-size: 20px;"> Cuidados Essenciais para Filhotes</b>
       </h2><br>
     <p>A vacinação é fundamental para proteger o animal contra doenças graves, como cinomose e parvovirose. Já a vermifugação previne vermes intestinais que podem afetar...</p>
@@ -232,7 +232,7 @@
     <button onclick="window.location.href='pet1.html'"><b style="color: blue;">Leia mais <img src="../web/img/seta.gif"/></b></button>
   </div>
   <div class="petum">
-      <div class="imn"> <img src="./img/pet agua.jpg" alt="Banho e Tosa" /></div>
+      <div class="imn"> <img src="./img/blog3.jpg" alt="Banho e Tosa" /></div>
       <h2><b style="font-size: 20px;"> Como Proteger Seu Pet Durante o Verão</b>
       </h2><br><br>
     <p>O calor intenso pode prejudicar a saúde do seu pet. O asfalto quente pode queimar as patas dos animais e o calor excessivo pode levar à...</p>
@@ -243,6 +243,11 @@
   
   </div>
 
+  <br><br><br><br><br><br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br><br><br><br><br><br>oi
+  <br><br><br><br><br><br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br><br><br><br><br><br>
 
   <script src="./JS/js3.js"></script>
 </body>
