--- a/front/web/index.html
+++ b/front/web/index.html
@@ -165,22 +165,13 @@
     <br />
     <div class="fundoparcial-content">
       <div class="pet">
-        <h1><b style="font-size: 35px;">Categorias:</b></h1>
-      </div>
+        <h1><b style="font-size: 35px;">Todos os produtos:</b></h1>
+      </div><br>
       <div class="animal">
-        <button onclick="window.location.href='cachorros.html'">
-          <img src="../web/images/cachorro.gif" alt="Cachorros" />Cachorros
-        </button>
-        <button onclick="window.location.href='gatos.html'">
-          <img src="../web/images/gato.gif" alt="Gatos" />Gatos
-        </button>  
         <button onclick="window.location.href='pets.html'">
-          <img src="../web/images/peixe-palhaco.gif" alt="Peixes" />Outros pets
+          <img src="../web/images/pet-food.png" />Produtos para seus pets 
         </button>
-        <button onclick="window.location.href='farmacia.html'">
-          <img src="../web/images/farmacia.gif" alt="Peixes" />Farmácia
-        </button>
-      </div>
+      </div><br>
     </div>
   </section>
 
@@ -207,8 +198,12 @@
       <img src="../web/images/veterinario.png" alt="Veterinário" /></button>
     </div>
   </div>
-
-  <br><br><br><br><br><br><br>
+<br><br><br><br>
+  <div class="video">
+    <img src="../web/images/Frete grátis 1.gif" alt="Saúde Pet" />
+  </div>
+<br><br><br><br><br>
+  <br>
 <h1><b style="font-size: 45px; color: rgb(0, 17, 255);">Blog Pet Gatô:</b></h1><br><br><br><br><br><br><br><br><br>
   <div class="blog">
     <br />
