--- a/front/web/index.html
+++ b/front/web/index.html
@@ -237,12 +237,58 @@
   </div>
   
   </div>
+<br><br><br><br><br><br><br><br><br><br><br><br>
+  <footer class="footer">
+  <div class="footer-content">
+    <!-- Seção Sobre -->
+    <div class="footer-section">
+      <h3>Sobre o PetShop</h3>
+      <p>Somos uma loja dedicada ao bem-estar dos seus pets. Oferecemos produtos de qualidade e serviços personalizados para cães, gatos e outros animais.</p>
+      <div class="social-links">
+        <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+      </div>
+    </div>
 
-  <br><br><br><br><br><br><br><br><br><br><br><br>
-  <br><br><br><br><br><br><br><br><br><br><br><br>
-  <br><br><br><br><br><br><br><br><br><br><br><br>oi
-  <br><br><br><br><br><br><br><br><br><br><br><br>
-  <br><br><br><br><br><br><br><br><br><br><br><br>
+    <!-- Seção Links Úteis -->
+    <div class="footer-section">
+      <h3>Links Úteis</h3>
+      <ul>
+        <li><a href="#">Produtos para Cães</a></li>
+        <li><a href="#">Produtos para Gatos</a></li>
+        <li><a href="#">Serviços de Banho e Tosa</a></li>
+        <li><a href="#">Consultas Veterinárias</a></li>
+        <li><a href="#">Política de Privacidade</a></li>
+      </ul>
+    </div>
+
+    <!-- Seção Contato -->
+    <div class="footer-section">
+      <h3>Contato</h3>
+      <p><i class="fas fa-map-marker-alt"></i> Rua das Flores, 123 - Centro, São Paulo - SP</p>
+      <p><i class="fas fa-phone"></i> (11) 99999-9999</p>
+      <p><i class="fas fa-envelope"></i> contato@petshop.com.br</p>
+      <p><i class="fas fa-clock"></i> Seg-Sex: 9h às 18h | Sáb: 9h às 14h</p>
+    </div>
+
+    <!-- Seção Newsletter -->
+    <div class="footer-section">
+      <h3>Newsletter</h3>
+      <p>Receba dicas e promoções exclusivas!</p>
+      <form class="newsletter-form">
+        <input type="email" placeholder="Seu e-mail" required>
+        <button type="submit">Inscrever</button>
+      </form>
+    </div>
+  </div>
+
+  <!-- Direitos Autorais -->
+  <div class="footer-bottom">
+    <p>&copy; 2023 PetShop. Todos os direitos reservados. Desenvolvido com ❤️ para pets.</p>
+  </div>
+</footer>
+
 
   <script src="./JS/js3.js"></script>
 </body>
