--- a/front/web/index.html
+++ b/front/web/index.html
@@ -204,6 +204,16 @@
   </div>
 <br><br><br><br><br>
   <br>
+  
+  <div class="promos">
+    
+  </div>
+  <!-- Container dos indicadores (bolinhas) -->
+  <div class="carousel-indicators" aria-label="Indicadores do carousel">
+    <!-- As bolinhas serão criadas dinamicamente pelo JavaScript -->
+  </div>
+  <br><br><br><br><br><br><br><br><br>
+
 <h1><b style="font-size: 45px; color: rgb(0, 17, 255);">Blog Pet Gatô:</b></h1><br><br><br><br><br><br><br><br><br>
   <div class="blog">
     <br />
