--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        <!-- Opcional: Mensagem para usuários com JS desabilitado -->
        <noscript>
            <meta http-equiv="refresh" content="0; url=minha-pasta/index.html">
-           <p>Redirecionando para o site principal... Se não funcionar, <a href="minha-pasta/index.html">clique aqui</a>.</p>
+           <p>Redirecionando para o site principal... Se não funcionar, <a href="front/web/index.html">clique aqui</a>.</p>
        </noscript>
    </head>
    <body>
