--- a/front/web/pets.html
+++ b/front/web/pets.html
@@ -40,5 +40,7 @@
       <img src="../web/images/noticias.gif" alt="Cadastrar" width="40" height="40" />Cadastrar
     </button>
   </div>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <h1><b style="font-size: 45px; color: rgb(0, 17, 255);">Produtos: tudo o que o seu animalzinho precisa</b></h1><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
