--- a/front/web/login.html
+++ b/front/web/login.html
@@ -32,6 +32,7 @@
 				<a href="index.html"><button type="button" onclick="voltar()">Voltar</button></a>
 				<br>
 				<a href="cadastrar.html">Cadastre-se aqui</a>
+				<a href="senhaadmin.html">É administrador? Clique aqui</a>
 			</form>
 		</div>
 
