--- a/front/web/index.html
+++ b/front/web/index.html
@@ -239,32 +239,32 @@
     
 <div class="petum">
   
-      <div class="imn"> <img src="./images/blog1.jpg" alt="Banho e Tosa" /></div>
+      <div class="imn"> <img src="./img/blog1.jpg" alt="Banho e Tosa" /></div>
       <h2><b> Cuidados Essenciais para Filhotes</b>
       </h2><br>
     <p>A vacinação é fundamental para proteger o animal contra doenças graves, como cinomose e parvovirose. Já a vermifugação previne vermes intestinais que podem afetar...</p>
     <br><h3>21/09/2025 | 6min de leitura</h3>
 
-    <button onclick="window.location.href='pet3.html'"><h4>Leia mais</h4> <img src="../web/images/seta.gif"/></button>
+    <button onclick="window.location.href='pet3.html'"><h4>Leia mais</h4> <img src="../web/img/seta.gif"/></button>
   </div>
 
     <div class="petum">
-      <div class="imn"> <img src="../web/images/download.avif" alt="Banho e Tosa" /></div>
+      <div class="imn"> <img src="../web/img/download.avif" alt="Banho e Tosa" /></div>
       <h2><b > O que fazer se o Seu Pet estiver vesgo</b>
       </h2><br><br>
     <p> Alteração nos nervos que controlam os músculos dos olhos, o que pode causar desalinhamento ocular. Isso pode vir a...</p>
     <br><h3>17/09/2025 | 5min de leitura</h3>
     <br>
-    <button onclick="window.location.href='pet1.html'"><h4>Leia mais</h4> <img src="../web/images/seta.gif"/></button>
+    <button onclick="window.location.href='pet1.html'"><h4>Leia mais</h4> <img src="../web/img/seta.gif"/></button>
   </div>
   <div class="petum">
-      <div class="imn"> <img src="./images/blog3.jpg" alt="Banho e Tosa" /></div>
+      <div class="imn"> <img src="../web/img/blog3.jpg" alt="Banho e Tosa" /></div>
       <h2><b > Como Proteger Seu Pet Durante o Verão</b>
       </h2><br><br>
     <p>O calor intenso pode prejudicar a saúde do seu pet. O asfalto quente pode queimar as patas dos animais e o calor excessivo pode levar à...</p>
     <br><h3>08/10/2025 | 4min de leitura</h3>
     
-    <button onclick="window.location.href='pet2.html'"><h4>Leia mais</h4> <img src="../web/images/seta.gif"/></button>
+    <button onclick="window.location.href='pet2.html'"><h4>Leia mais</h4> <img src="../web/img/seta.gif"/></button>
   </div>
   
   </div>
@@ -302,7 +302,7 @@
        <div class="vejamais">
         <a href="https://www.petworktravel.com.br/pt/" target="_blank">
   <button>
-    <b style="color: blue;">Veja mais <img src="../web/images/seta.gif" alt="seta"/></b>
+    <b style="color: blue;">Veja mais </b>
   </button>
 </a>
 </div>
@@ -315,7 +315,7 @@
         <div class="vejamais">
         <a href="https://www.dogresort.com.br/" target="_blank">
   <button>
-    <b style="color: blue;">Veja mais <img src="../web/images/seta.gif" alt="seta"/></b>
+    <b style="color: blue;">Veja mais </b>
   </button>
 </a>
 </div>
@@ -328,7 +328,7 @@
         <div class="vejamais">
         <a href="https://daycarepet.com.br/pet-spa" target="_blank">
   <button>
-    <b style="color: blue;">Veja mais <img src="../web/images/seta.gif" alt="seta"/></b>
+    <b style="color: blue;">Veja mais </b>
   </button>
 </a>
 </div>
@@ -341,7 +341,7 @@
         <div class="vejamais">
         <a href="https://alfdogpetcreche.com.br/?gad_source=1&gad_campaignid=22605562734&gbraid=0AAAAA_N_39wBy_VWFi3drNWCBdbE0xsyL&gclid=Cj0KCQjwjL3HBhCgARIsAPUg7a68OBxpd7M9LsIHzy9hWk-RfsrNovDAHp7dDqHwNaugCEnF5_C9EiIaAri-EALw_wcB" target="_blank">
   <button>
-    <b style="color: blue;">Veja mais <img src="../web/images/seta.gif" alt="seta"/></b>
+    <b style="color: blue;">Veja mais </b>
   </button>
 </a>
 </div>
@@ -355,7 +355,7 @@
         <div class="vejamais">
         <a href="https://passeios.petsturistas.com.br/" target="_blank">
   <button>
-    <b style="color: blue;">Veja mais <img src="../web/images/seta.gif" alt="seta"/></b>
+    <b style="color: blue;">Veja mais </b>
   </button>
 </a>
 </div> </div>
