--- a/front/web/admin.html
+++ b/front/web/admin.html
@@ -182,7 +182,7 @@
        <div class="vejamais">
         <a href="https://www.petworktravel.com.br/pt/" target="_blank">
   <button>
-    <b style="color: blue;">Veja mais <img src="../web/img/seta.gif" alt="seta"/></b>
+    <b style="color: blue;">Veja mais </b>
   </button>
 </a>
 </div>
@@ -195,7 +195,7 @@
         <div class="vejamais">
         <a href="https://www.dogresort.com.br/" target="_blank">
   <button>
-    <b style="color: blue;">Veja mais <img src="../web/img/seta.gif" alt="seta"/></b>
+    <b style="color: blue;">Veja mais</b>
   </button>
 </a>
 </div>
@@ -208,7 +208,7 @@
         <div class="vejamais">
         <a href="https://daycarepet.com.br/pet-spa" target="_blank">
   <button>
-    <b style="color: blue;">Veja mais <img src="../web/img/seta.gif" alt="seta"/></b>
+    <b style="color: blue;">Veja mais </b>
   </button>
 </a>
 </div>
@@ -221,7 +221,7 @@
         <div class="vejamais">
         <a href="https://alfdogpetcreche.com.br/?gad_source=1&gad_campaignid=22605562734&gbraid=0AAAAA_N_39wBy_VWFi3drNWCBdbE0xsyL&gclid=Cj0KCQjwjL3HBhCgARIsAPUg7a68OBxpd7M9LsIHzy9hWk-RfsrNovDAHp7dDqHwNaugCEnF5_C9EiIaAri-EALw_wcB" target="_blank">
   <button>
-    <b style="color: blue;">Veja mais <img src="../web/img/seta.gif" alt="seta"/></b>
+    <b style="color: blue;">Veja mais</b>
   </button>
 </a>
 </div>
@@ -235,7 +235,7 @@
         <div class="vejamais">
         <a href="https://passeios.petsturistas.com.br/" target="_blank">
   <button>
-    <b style="color: blue;">Veja mais <img src="../web/img/seta.gif" alt="seta"/></b>
+    <b style="color: blue;">Veja mais</b>
   </button>
 </a>
 </div> </div>
