--- a/front/web/produtos.html
+++ b/front/web/produtos.html
@@ -11,45 +11,6 @@
             font-size: 16px;
             cursor: pointer;
         }
-        .produtos-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            gap: 20px;
-            margin-top: 20px;
-        }
-
-        .produto-card {
-            width: 250px;
-            padding: 20px;
-            background-color: #f9f9f9;
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            transition: transform 0.3s;
-        }
-
-        .produto-card img {
-            width: 100%;
-            height: 150px;
-            object-fit: cover;
-            border-radius: 10px;
-        }
-
-        .produto-card h3 {
-            font-size: 18px;
-            margin: 10px 0;
-        }
-
-        .produto-card p {
-            font-size: 14px;
-            margin: 10px 0;
-        }
-
-        .produto-card:hover {
-            transform: scale(1.05);
-        }
         .modal {
             display: none;
             position: fixed;
@@ -131,8 +92,7 @@
 
     .produto-card img {
       width: 100%;
-      height: 150px;
-      object-fit: cover;
+      height: 190px;
     }
 
     .produto-card .info {
@@ -142,7 +102,7 @@
     .produto-card h3 {
       margin: 0 0 10px 0;
       font-size: 1.2em;
-      color: #005b99;
+      color: #030099;
     }
 
     .produto-card p {
@@ -154,7 +114,7 @@
     .produto-card .preco {
       font-size: 1.1em;
       font-weight: bold;
-      color: #0077aa;
+      color: #0003aa;
     }
     .modal {
   display: none;
