--- a/front/web/produtoscli.html
+++ b/front/web/produtoscli.html
@@ -77,8 +77,7 @@
 
     .produto-card img {
       width: 100%;
-      height: 150px;
-      object-fit: cover;
+      height: 190px;
     }
 
     .produto-card .info {
@@ -88,7 +87,7 @@
     .produto-card h3 {
       margin: 0 0 10px 0;
       font-size: 1.2em;
-      color: #005b99;
+      color: #030099;
     }
 
     .produto-card p {
@@ -100,7 +99,7 @@
     .produto-card .preco {
       font-size: 1.1em;
       font-weight: bold;
-      color: #0077aa;
+      color: #001faa;
     }
   </style>
 </head>
