--- a/front/web/consulta.html
+++ b/front/web/consulta.html
@@ -53,6 +53,6 @@
         </div>
     </div>
 
-    <script src="JS/js5.js"></script>
+    <script src="./js/consulta.js"></script>
 </body>
 </html>
