--- a/front/web/consultaadmin.html
+++ b/front/web/consultaadmin.html
@@ -77,6 +77,6 @@
       </div>
       <i class="fab fa-whatsapp"></i>
     </div>
-    <script src="JS/js5.js"></script>
+    <script src="./js/consulta.js"></script>
 </body>
 </html>
