--- a/front/web/index.html
+++ b/front/web/index.html
@@ -431,7 +431,6 @@
       </form>
     </div>
   </div>
-  <!-- Direitos Autorais -->
   <div class="footer-bottom">
     <p>&copy; 2025 PetShop. Todos os direitos reservados. Desenvolvido com ❤️ para pets.</p>
   </div>
@@ -497,6 +496,6 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 
-  <script src="./JS/js3.js"></script>
+  <script src="./js/index.js"></script>
 </body>
 </html>
