--- a/front/web/carrinho.html
+++ b/front/web/carrinho.html
@@ -34,7 +34,7 @@
         <button id="enviarPedido" onclick="enviarPedido()">Enviar Pedido</button>
     </main>
 
-    <script src="./JS/js4.js"></script>
+    <script src="./js/carrinho.js"></script>
 </body>
 
 </html>
