--- a/front/web/adocao.html
+++ b/front/web/adocao.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Adoção de Animais</title>
-  <Link rel="stylesheet" href="./css/style5.css">
+  <Link rel="stylesheet" href="./css/adocao.css">
 
 </head>
 
@@ -15,14 +15,13 @@
   </div>
 
   <div class="container">
-    <button class="card" onclick="location.href='Cachorro.html'">Adotar Cachorro</button>
-    <button class="card" onclick="location.href='Gato.html'">Adotar Gato</button>
-    <button class="card" onclick="location.href='Peixe.html'">Adotar Peixe</button>
-    <button class="card" onclick="location.href='Passaro.html'">Adotar Passaro</button>
+    <button class="card" onclick="location.href='./adocao/Cachorro.html'">Adotar Cachorro</button>
+    <button class="card" onclick="location.href='./adocao/Gato.html'">Adotar Gato</button>
+    <button class="card" onclick="location.href='./adocao/Peixe.html'">Adotar Peixe</button>
+    <button class="card" onclick="location.href='./adocao/Passaro.html'">Adotar Passaro</button>
 
     <a href="index.html"><button id="voltar">Voltar</button></a>
   </div>
 
 </body>
-
 </html>
