--- a/front/web/index.html
+++ b/front/web/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./css/style1.css" />
+  <link rel="stylesheet" href="./css/index.css" />
   <link rel="icon" href="../web/images/icon.jpg" type="image/x-icon" />
   <title>Pet Gatô: o melhor petshop online, em todos os aspectos</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
@@ -267,7 +267,7 @@
     <p>A vacinação é fundamental para proteger o animal contra doenças graves, como cinomose e parvovirose. Já a vermifugação previne vermes intestinais que podem afetar...</p>
     <br><h3>21/09/2025 | 6min de leitura</h3>
 
-    <button onclick="window.location.href='pet3.html'"><h4>Leia mais</h4> <img src="../web/img/seta.gif"/></button>
+    <button onclick="window.location.href='./blog/blog1.html'"><h4>Leia mais</button>
   </div>
 
   <div class="petum">
@@ -277,7 +277,7 @@
     <p> Alteração nos nervos que controlam os músculos dos olhos, o que pode causar desalinhamento ocular. Isso pode vir a...</p>
     <br><h3>17/09/2025 | 5min de leitura</h3>
     <br>
-    <button onclick="window.location.href='pet1.html'"><h4>Leia mais</h4> <img src="../web/img/seta.gif"/></button>
+    <button onclick="window.location.href='./blog/blog2.html'"><h4>Leia mais</h4> <img src="../web/img/seta.gif"/></button>
   </div>
   <div class="petum">
       <div class="imn"> <img src="../web/img/blog3.jpg" alt="Banho e Tosa" /></div>
@@ -285,7 +285,7 @@
       </h2><br><br>
     <p>O calor intenso pode prejudicar a saúde do seu pet. O asfalto quente pode queimar as patas dos animais e o calor excessivo pode levar à...</p>
     <br><h3>08/10/2025 | 4min de leitura</h3>
-    <button onclick="window.location.href='pet2.html'"><h4>Leia mais</h4> <img src="../web/img/seta.gif"/></button>
+    <button onclick="window.location.href='./blog/blog3.html'"><h4>Leia mais</h4></button>
   </div>
   </div>
 
