--- a/front/web/admin.html
+++ b/front/web/admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./css/style13.css" />
+  <link rel="stylesheet" href="./css/admin.css" />
   <link rel="icon" href="../web/images/icon.jpg" type="image/x-icon" />
   <title>Pet Gatô: o melhor petshop online, em todos os aspectos</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
