--- a/front/web/adocao/peixe.html
+++ b/front/web/adocao/peixe.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style10.css">
+    <link rel="stylesheet" href="./css/animais.css">
     <title>Adote um Animal</title>
 </head>
 
