--- a/front/web/confira.html
+++ b/front/web/confira.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../web/images/icon.jpg" type="image/x-icon">
     <title>Pet Gatô: o melhor petshop online, em todos os aspectos</title>
-    <link rel="stylesheet" href="./css/style12.css" />
+    <link rel="stylesheet" href="./css/confira.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
