--- a/front/web/adocao.html
+++ b/front/web/adocao.html
@@ -15,10 +15,10 @@
   </div>
 
   <div class="container">
-    <button class="card" onclick="location.href='./adocao/Cachorro.html'">Adotar Cachorro</button>
-    <button class="card" onclick="location.href='./adocao/Gato.html'">Adotar Gato</button>
-    <button class="card" onclick="location.href='./adocao/Peixe.html'">Adotar Peixe</button>
-    <button class="card" onclick="location.href='./adocao/Passaro.html'">Adotar Passaro</button>
+    <button class="card" onclick="location.href='./adocao/cachorro.html'">Adotar Cachorro</button>
+    <button class="card" onclick="location.href='./adocao/gato.html'">Adotar Gato</button>
+    <button class="card" onclick="location.href='./adocao/peixe.html'">Adotar Peixe</button>
+    <button class="card" onclick="location.href='./adocao/passaro.html'">Adotar Passaro</button>
 
     <a href="index.html"><button id="voltar">Voltar</button></a>
   </div>
