--- a/front/web/adocao/peixe.html
+++ b/front/web/adocao/peixe.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/animais.css">
+    <link rel="stylesheet" href="../css/animais.css">
     <title>Adote um Animal</title>
 </head>
 
 
    <div class="back-button">
-      <a href="adocao.html"><button>Voltar</button></a>
+      <a href="../adocao.html"><button>Voltar</button></a>
     </div>
 </div>
 <div class="container1">
