--- a/front/web/adocao/passaro.html
+++ b/front/web/adocao/passaro.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/animais.css">
+  <link rel="stylesheet" href="../css/animais.css">
   <title>Adoção</title>
 </head>
 
@@ -22,7 +22,7 @@
     <br>
     <div class="back-button">
       <h3>Se interessou por algum bichinho?</h3>  <button onclick="abrirModal()" type="button">Adotar</button>
-      <a href="adocao.html"><button>Voltar</button></a>
+      <a href="../adocao.html"><button>Voltar</button></a>
     </div>
   </nav>
   <br>
