--- a/front/web/confira.html
+++ b/front/web/confira.html
@@ -14,11 +14,11 @@
     <h1>𝓟𝓮𝓽 𝓖𝓪𝓽𝓸</h1><button onclick="window.location.href='index.html'">Inicio</button>
       
       <button onclick="window.location.href='carrinho.html'">
-      <img src="../web/images/adicionar-ao-carrinho.png" alt="Carrinho" />
+      <img src="./docs/sacola.png" alt="Carrinho" />
 
     </button>
       <button onclick="window.location.href='login.html'">
-      <img src="../web/images/pessoa.png" alt="Login" />
+      <img src="./docs/pessoa.png" alt="Login" />
     </button>
     </header><br><br><br><br>
      <br><div class="fundo">
@@ -30,7 +30,7 @@
           </div></div>
     </div>
     <div class="confira">
-      <img src="../web/images/icon.jpg" alt="Confira nossas vantagens!" />
+      <img src="./docs/icon.jpg" alt="Confira nossas vantagens!" />
       <h1>Confira nossas vantagens!</h1>
       <p>Oferecemos diversas vantagens para você e seu pet, confira abaixo:</p>
     </div>
@@ -40,26 +40,26 @@
         <div class="textoum">
       <h1>Receba em algumas horas!</h1>
       <h2>Regras:</h2><br><br>
-      <p><img src="../web/images/check.gif"> Compre pelo site            <<<<<<<<<<<<<<<<<<<<<<<<<<< </p>
-      <p><br><img src="../web/images/check.gif">Adicione o produto ao carrinho e finalize, se for da mesma<br> cidade de uma loja fisica, entregaremos o mais rapido o possivel!</p>
+      <p> Compre pelo site </p>
+      <p><br>Adicione o produto ao carrinho e finalize, se for da mesma<br> cidade de uma loja fisica, entregaremos o mais rapido o possivel!</p>
       </p>
       <br>
-      <p><img src="../web/images/check.gif"> Pedidos realizados até as 14h, entregues no mesmo dia.
-      <<p><br><img src="../web/images/check.gif">Pedidos realizados após as 14h, entregues no dia seguinte.</p>
+      <p> Pedidos realizados até as 14h, entregues no mesmo dia.
+      <<p><br>Pedidos realizados após as 14h, entregues no dia seguinte.</p>
       </p>
     </div class="imgum">
-      <img src="../web/images/receba.jpg"  />
+      <img src="./docs/receba.jpg"  />
     </div><br><br><br><br><br><br><br><br>
 
 
       <div class="parcele">
-      <img src="../web/images/parcele.jpg"  />
+      <img src="./docs/parcele.jpg"  />
         <div class="textoum">
       <h1>Parcele em 3x sem Juros!</h1>
       <h2>Regras:</h2><br><br>
       <br>
-      <p><img src="../web/images/check.gif"> Parcele suas compras em até 3x <br>sem juros no cartão de crédito.
-      <p><br><img src="../web/images/check.gif"> Parcelas mínimas de 50 reais!<</p>
+      <p> Parcele suas compras em até 3x <br>sem juros no cartão de crédito.
+      <p><br> Parcelas mínimas de 50 reais!<</p>
       </p>
     </div class="imgum">
     </div>
@@ -68,20 +68,20 @@
         <div class="textoum">
       <h1>Frete Gratís!</h1>
       <h2>Regras:</h2><br><br>
-      <p><img src="../web/images/check.gif"> Compras acima de R$150,00 tem frete grátis!</p>
+      <p> Compras acima de R$150,00 tem frete grátis!</p>
     </div class="imgdois">
-      <img src="../web/images/frete.jpg"  />
+      <img src="./docs/frete.jpg"  />
     </div>
 
     
       <div class="retire">
-      <img src="../web/images/petshopdois.png"  />
+      <img src="./docs/petshopdois.png"  />
         <div class="textoum">
       <h1>Retire na loja!</h1>
       <h2>Regras:</h2><br><br>
       <br>
-      <p><img src="../web/images/check.gif">Compras realizadas online podem ser retiradas na loja física em até 2 horas após a compra.</p>
-      <p><br><img src="../web/images/check.gif"> Somente em hórarios comercias.<</p>
+      <p>Compras realizadas online podem ser retiradas na loja física em até 2 horas após a compra.</p>
+      <p><br> Somente em hórarios comercias.<</p>
       </p>
     </div class="imgum">
     </div>
@@ -92,14 +92,14 @@
         <div class="textoum">
       <h1>Troque em até 3o dias!</h1>
       <h2>Regras:</h2><br><br>
-      <p><img src="../web/images/check.gif"> Troque seu pedido dentre 30 dias.</p><br>
-      <p><img src="../web/images/check.gif">Deve estar dentro do prazo.</p>
+      <p> Troque seu pedido dentre 30 dias.</p><br>
+      <p>Deve estar dentro do prazo.</p>
       <br>
-      <p><img src="../web/images/check.gif"> Deve ter a nota fiscal,ou o comprovente que vem junto com o pedido.
-      <p><br><img src="../web/images/check.gif">O hórario de troca é entre 8h ás 14h.</p>
+      <p> Deve ter a nota fiscal,ou o comprovente que vem junto com o pedido.
+      <p><br>O hórario de troca é entre 8h ás 14h.</p>
       </p>
     </div class="imgum">
-      <img src="../web/images/troca.png"  />
+      <img src="./docs/troca.png"  />
     </div><br><br><br><br><br><br><br><br>
 
 </body>
