--- a/front/web/login.html
+++ b/front/web/login.html
@@ -11,7 +11,7 @@
 <body>
 	<main class="container">
 		<div class="containerLeft">
-			<img src="pepet3.png" alt="logo">
+			<img src="./docs/pepet3.png" alt="logo">
 		</div>
 
 		<div class="containerRight">
