--- a/front/web/produtos.html
+++ b/front/web/produtos.html
@@ -79,9 +79,8 @@
     </form>
   </div>
 </div>
-
+<script src="./js/api.js"></script>
 <script>
-  const urlVercel = 'https://backend-tcc-petshop-petgato-2025.vercel.app/produto';
   let produtos = [];
 
   function buscarProdutos() {
