nova pagina de conultas

--- a/front/web/admin.html
+++ b/front/web/admin.html
@@ -10,15 +10,15 @@
 </head>
 <body>
   <header>
-    <h1>𝓟𝓮𝓽 𝓖𝓪𝓽𝓸</h1>
+    <h1>Pet Gatô</h1>
     <button id="logout" onclick="window.location.href='index.html'">
      <h2>Sair para a página inicial</h2>
     </button>
   </header>
 
   <div class="Containerheader">
-    <button onclick="window.location.href='consultaadmin.html'">
-      Consulta
+    <button onclick="window.location.href='consultaadmin2.html'">
+      Ver consultas
     </button>
   </div>
 
