--- a/front/web/adocao.html
+++ b/front/web/adocao.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Adoção de Animais</title>
+  <title>Pet Gatô: o melhor petshop online, em todos os aspectos</title>
   <Link rel="stylesheet" href="./css/adocao.css">
 
 </head>
