--- a/front/web/index.html
+++ b/front/web/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- Cabeçalho -->
   <header>
-    <h1>𝓟𝓮𝓽 𝓖𝓪𝓽𝓸</h1>
+    <h1>Pet Gatô</h1>
     <li class="search-icon"></li>
     <button onclick="window.location.href='carrinho.html'">
       <img src="./docs/sacola.png" alt="Carrinho" />
