--- a/front/web/cadastrar.html
+++ b/front/web/cadastrar.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/cadastrar.css">
-  <title>Cadastrar</title>
+  <title>Cadastro de clientes</title>
 </head>
 
 <body>
