--- a/front/web/consultaadmin.html
+++ b/front/web/consultaadmin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/consulta.css">
-    <title>Cadastro de Pet</title>
+    <title>Consulta Pet</title>
 </head>
 <body>
     <div class="container">
@@ -77,6 +77,7 @@
       </div>
       <i class="fab fa-whatsapp"></i>
     </div>
+    <script src="./js/api.js"></script>
     <script src="./js/consulta.js"></script>
 </body>
 </html>
