--- a/front/web/produtoscli.html
+++ b/front/web/produtoscli.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pet Gato</title>
+  <title>Pet Gatô: o melhor petshop online, em todos os aspectos</title>
   <link rel="stylesheet" href="./css/produtoscli.css">
 </head>
 <body>
   <header>
-    <h1>𝓟𝓮𝓽 𝓖𝓪𝓽𝓸</h1>
+    <h1>Pet Gatô</h1>
     <button onclick="window.location.href='index.html'">
       Voltar para a tela inicial
     </button>
@@ -22,7 +22,6 @@
       </select>
     </div>
   </header>
-
 
   <div id="produtosLista" class="produtos-container">
   </div>
