--- a/front/web/consulta.html
+++ b/front/web/consulta.html
@@ -52,7 +52,7 @@
             </div>
         </div>
     </div>
-
+    <script src="./js/api.js"></script>
     <script src="./js/consulta.js"></script>
 </body>
 </html>
