--- a/front/web/consultaadmin.html
+++ b/front/web/consultaadmin.html
@@ -78,6 +78,6 @@
       <i class="fab fa-whatsapp"></i>
     </div>
     <script src="./js/api.js"></script>
-    <script src="./js/consulta.js"></script>
+    <script src="./js/consultaadmin.js"></script>
 </body>
 </html>
